--- a/Views/Aluno/Delete.cshtml
+++ b/Views/Aluno/Delete.cshtml
@@ -1,80 +1,34 @@
 ﻿@model teste_fiap.Models.Aluno
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Excluir";
 }
+    <div class="container">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Excluir</h2>
+                </div>
+                <div class="modal-body">
+                    <h3>Você tem certeza que quer excluir esse aluno?</h3>
+                    <br />
+                    <div class="modal-footer">
+                        <div>
 
-<h2>Excluir</h2>
 
-<h3>Você tem certeza que quer excluir esse aluno?</h3>
-<div>
-    <h4>Aluno</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.RM)
-        </dt>
+                            @using (Html.BeginForm())
+                            {
+                                @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.RM)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DataNascimento)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DataNascimento)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DDD)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DDD)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Telefone)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Telefone)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Curso.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Curso.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Segmento.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Segmento.Nome)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Excluir" class="btn btn-default" /> |
-            @Html.ActionLink("Voltar para listagem", "Index")
+                            <div class="form-actions no-color">
+                                <input type="submit" value="Sim" class="btn btn-danger" />
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Não</button>
+                            </div>
+                            }
+                        </div>
+                        
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
         </div>
-    }
-</div>
+       
