--- a/Views/Aluno/Details.cshtml
+++ b/Views/Aluno/Details.cshtml
@@ -1,74 +1,69 @@
 ﻿@model teste_fiap.Models.Aluno
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes";
 }
+<div class="container">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2></h2>
+            </div>
+            <div class="modal-body">
+                <div>
+                    
+                    
+                    <dl class="dl-horizontal">
+                        <dt>
+                            Segmento:
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.Segmento.Nome)
+                        </dd>
 
-<h2>Details</h2>
 
-<div>
-    <h4>Aluno</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.RM)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Nome)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.RM)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.Nome)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
+                        <dt>
+                            Curso:
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.Curso.Nome)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DataNascimento)
-        </dt>
+                        <dt>
+                            Data de Nascimento:
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DataNascimento)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.DataNascimento)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DDD)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DDD)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Telefone)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Telefone)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Telefone)
-        </dd>
+                        <dd>
+                           (@Html.DisplayFor(model => model.DDD)) @Html.DisplayFor(model => model.Telefone)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Curso.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Curso.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Segmento.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Segmento.Nome)
-        </dd>
-
-    </dl>
+                    </dl>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <p>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
+                </p>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Codigo }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
